--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -21,7 +21,8 @@ I performed as a student tutor of CSE and Mathematics in Brac University for mor
 Besides, I have experience of working as a software engineer in a USA based company. I am interested in research as well and have successfully presented my works in well-known international Conferences.
 After joining Brac University, I have designed and introduced a totally new elective course "CSE419: Programming Languages" and also coordinated Algorithm course in the department of CSE.
 </br>
-In MSc, I completed my university courses with cgpa 4 and 100% scholarship from the same university for my excellent academic background. Because of my intense keenness towards research, I took 6 courses in data science such as neural network, symbolic machine learning, advanced artificial intelligence, natural language processing, decision support system. I did some projects like benchmarking ML algorithms for detecting diabetic retinopathy, Predicting covid19 severity level using ML and published papers. Currently, I am doing thesis on Machine learning and explainable AI. 
+In MSc, I completed my university courses with cgpa 4 and 100% scholarship from the same university for my excellent academic background. Because of my intense keenness towards research, I took 6 courses in data science such as neural network, symbolic machine learning, advanced artificial intelligence, natural language processing, decision support system. I did some projects like benchmarking ML algorithms for detecting diabetic retinopathy, Predicting covid19 severity level using ML and published papers. You can check my github profile (https://github.com/shailyroy) to get the codes. 
+Currently, I am doing thesis on Machine learning and explainable AI. 
 </br>'
 
 # your resume. this file path should be relative to you "static" directory
